Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.0
-
None
-
FreeBSD 10.3 amd64 with Qt 5.5.1 from ports/packages, qt-creator master branch
-
3f11ef92167ba4622a5326eb7ef1fc67b61866eb
Description
https://codereview.qt-project.org/#/c/146769/7//ALL
introduced a change that leads to the following error on starting the program (pressing run):
SOFT ASSERT: "runConfiguration->runnable().is<StandardRunnable>()" in file ../../../../qt-creator/src/plugins/projectexplorer/localapplicationruncontrol.cpp, line 58
together with an empty messagebox displayed using a black cross on a red dot.
On pressing the debug-run button, the debug session can't be started because of a missing excecutable.
Commit 4ea8caccf24451ab70db3bc4aa5ee36859e41684
is the last known working version.
The problem appears on FreeBSD systems using clang as compiler (10.3: clang-3.4, 11-current: clang-3.8), it does NOT appear on FreeBSD 9.3 which used gcc 48.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-16421 Button is disabled
-
- Closed
-