src/plugins/debugger/debuggerplugin.cpp
@@ -3834,6 +3834,9 @@ QList<QObject *> DebuggerPlugin::createTestObjects() const
 #endif // if  WITH_TESTS
 
 } // namespace Internal
+
+void *AnalyzerConnection::staticTypeId = &AnalyzerConnection::staticTypeId;
+
 } // namespace Debugger
 
 #include "debuggerplugin.moc"
